- fixed mobile spacing

--- a/portfolio_2021/src/App.css
+++ b/portfolio_2021/src/App.css
@@ -1,4 +1,5 @@
 .App {
+	overflow-x: hidden;
 	text-align: center;
 	background-color: white;
 	height: auto;
