--- a/portfolio_2021/src/Views/Home/Intro/Intro.css
+++ b/portfolio_2021/src/Views/Home/Intro/Intro.css
@@ -169,7 +169,14 @@
 		width: 2rem;
 	}
 
+	.line1-dark {
+		width: 2rem;
+	}
+
 	.line2 {
+		width: 2rem;
+	}
+	.line2-dark {
 		width: 2rem;
 	}
 }
