--- a/portfolio_2021/src/Views/Home/Skills/Skills.css
+++ b/portfolio_2021/src/Views/Home/Skills/Skills.css
@@ -101,7 +101,7 @@
 }
 
 .columns {
-	background-color: teal;
+	background-color: transparent;
 	height: 100%;
 	/* text-align: center; */
 }
@@ -163,12 +163,24 @@
 	margin-left: -10rem;
 } */
 
+@media (max-width: 600px) {
+	.skills-main-container-dark {
+		background-color: transparent;
+		margin-top: -4em;
+	}
+}
+
 @media (max-width: 768px) {
 	.skills-main-container {
 		height: auto;
 		background-color: transparent;
+		padding-bottom: 6rem;
 	}
-
+	.skills-main-container-dark {
+		height: auto;
+		padding-bottom: 6rem;
+		/* height: 110vh; */
+	}
 	.spacer {
 		height: 1rem;
 	}
@@ -183,7 +195,7 @@
 	}
 
 	.skills-content li {
-		margin-bottom: 2rem;
+		margin-bottom: 1.2rem;
 	}
 
 	.columns ul {
@@ -243,6 +255,7 @@
 @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) {
 	.skills-main-container {
 		background-color: transparent;
+		height: 90vh;
 	}
 	/* 
 	.columns ul {
@@ -260,6 +273,10 @@
 
 @media screen and (min-width: 1921px) {
 	.skills-main-container {
+		background-color: transparent;
+	}
+
+	.skills-main-container-dark {
 		background-color: transparent;
 	}
 
